monticore-generator/src/test/resources/cocos/invalid/A4010/A4010.mc4
package cocos.invalid.A4010;

grammar A4010 extends mc.grammars.types.TestTypes  {
  abstract ArrayType;

}
